--- a/RxApp.iOS/RxApp.iOS.csproj
+++ b/RxApp.iOS/RxApp.iOS.csproj
@@ -48,11 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RxUIApplicationDelegateHelper.cs" />
     <Compile Include="RxUIViewController.cs" />
     <Compile Include="Observable.cs" />
     <Compile Include="Bindings.cs" />
     <Compile Include="Scheduler.cs" />
+    <Compile Include="RxUIApplicationDelegate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
