--- a/RxApp/RxApp.csproj
+++ b/RxApp/RxApp.csproj
@@ -31,8 +31,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stack.cs" />
-    <Compile Include="NavigationStack.cs" />
     <Compile Include="RxCommand.cs" />
     <Compile Include="RxProperty.cs" />
     <Compile Include="Interfaces.cs" />
@@ -41,7 +39,7 @@
     <Compile Include="Bindings.cs" />
     <Compile Include="Observable.cs" />
     <Compile Include="Disposable.cs" />
-    <Compile Include="NavigationApp.cs" />
+    <Compile Include="NavigationApplicationBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
