--- a/RxApp.Android/packages.config
+++ b/RxApp.Android/packages.config
@@ -5,4 +5,5 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="MonoAndroid44" />
   <package id="Rx-Main" version="2.2.5" targetFramework="MonoAndroid44" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="MonoAndroid44" />
+  <package id="System.Collections.Immutable" version="1.1.34-rc" targetFramework="MonoAndroid50" />
 </packages>
