--- a/RxApp.Example.Android/packages.config
+++ b/RxApp.Example.Android/packages.config
@@ -5,6 +5,7 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="MonoAndroid44" />
   <package id="Rx-Main" version="2.2.5" targetFramework="MonoAndroid44" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="MonoAndroid44" />
+  <package id="System.Collections.Immutable" version="1.1.34-rc" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="21.0.3.0" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Insights" version="1.9.0.106" targetFramework="MonoAndroid50" />
