--- a/RxApp/packages.config
+++ b/RxApp/packages.config
@@ -5,4 +5,5 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Rx-Main" version="2.2.5" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="System.Collections.Immutable" version="1.1.34-rc" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
 </packages>
