--- a/RxApp.Example.iOS/packages.config
+++ b/RxApp.Example.iOS/packages.config
@@ -6,4 +6,5 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Splat" version="1.6.1" targetFramework="xamarinios10" />
+  <package id="System.Collections.Immutable" version="1.1.34-rc" targetFramework="xamarinios10" />
 </packages>
