--- a/RxApp.iOS/packages.config
+++ b/RxApp.iOS/packages.config
@@ -5,4 +5,5 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Main" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="System.Collections.Immutable" version="1.1.34-rc" targetFramework="xamarinios10" />
 </packages>
