--- a/RxApp.Example.XamarinForms.Android/Properties/AndroidManifest.xml
+++ b/RxApp.Example.XamarinForms.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="RxApp.Example.XamarinForms.Android">
-	<uses-sdk />
+	<uses-sdk android:minSdkVersion="14" android:targetSdkVersion="21" />
 	<application android:label="RxApp.Example.XamarinForms.Android">
 	</application>
 </manifest>
