--- a/RxApp.Example.XamarinForms.iOS/RxApp.Example.XamarinForms.iOS.csproj
+++ b/RxApp.Example.XamarinForms.iOS/RxApp.Example.XamarinForms.iOS.csproj
@@ -89,6 +89,30 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="System.Reactive.Interfaces">
+      <HintPath>..\packages\Rx-Interfaces.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Core">
+      <HintPath>..\packages\Rx-Core.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.PlatformServices">
+      <HintPath>..\packages\Rx-PlatformServices.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.PlatformServices.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Platform.iOS">
+      <HintPath>..\packages\Xamarin.Forms.1.4.1.6349\lib\Xamarin.iOS10\Xamarin.Forms.Platform.iOS.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Core">
+      <HintPath>..\packages\Xamarin.Forms.1.4.1.6349\lib\Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Xaml">
+      <HintPath>..\packages\Xamarin.Forms.1.4.1.6349\lib\Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Collections.Immutable">
+      <HintPath>..\packages\System.Collections.Immutable.1.1.34-rc\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Linq">
+      <HintPath>..\packages\Rx-Linq.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Linq.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Resources\Images.xcassets\AppIcons.appiconset\Contents.json" />
@@ -99,10 +123,38 @@
   <ItemGroup>
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+  <Import Project="..\packages\Xamarin.Forms.1.4.1.6349\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.4.1.6349\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
+  <ItemGroup>
+    <ProjectReference Include="..\RxApp\RxApp.csproj">
+      <Project>{CC5733DE-CD02-451A-8371-2F6067A5CE07}</Project>
+      <Name>RxApp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RxApp.Example\RxApp.Example.csproj">
+      <Project>{45AD3C90-23ED-4424-9F50-D8E843A59B7A}</Project>
+      <Name>RxApp.Example</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RxApp.iOS\RxApp.iOS.csproj">
+      <Project>{8FA289F3-255E-46D7-8946-8C1FA9B4B65C}</Project>
+      <Name>RxApp.iOS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RxApp.XamarinForms\RxApp.XamarinForms-iOS.csproj">
+      <Project>{F5D6C600-B70E-4815-8391-4582CCEEEACD}</Project>
+      <Name>RxApp.XamarinForms-iOS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RxApp.Example.XamarinForms\RxApp.Example.XamarinForms.csproj">
+      <Project>{B2528800-4CD4-43FB-8EF5-5EC73F37389A}</Project>
+      <Name>RxApp.Example.XamarinForms</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RxApp.XamarinForms\RxApp.XamarinForms.csproj">
+      <Project>{D3B874B7-575E-492C-9C70-F4D980653ABF}</Project>
+      <Name>RxApp.XamarinForms</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
